# calculator

./: CMakeLists.txt  README.md
cfiles/: calculate.c  calculator.h  change.c  main.c  preCalculate.c  screenPrinting.c
